--- a/src/assets/sass/pages.scss
+++ b/src/assets/sass/pages.scss
@@ -1,14 +1,17 @@
 @import "reset";
-.homepage {
-  & > div {
-    width: 80px;
-    height: 30px;
+.pages {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  &-header {
+    height: 56px;
+    @include absolute(0, 0);
+    background: $white;
+    z-index: 1;
   }
-  & > ul {
-    width: 60px;
-    li {
-      line-height: 24px;
-      cursor: pointer;
-    }
+  &-section {
+    background: $fc3a6f;
+    @include absolute(0, 56px);
+    @include overflow('y');
   }
 }
