--- a/src/assets/sass/reset.scss
+++ b/src/assets/sass/reset.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import "color";
 body,h1,h2,h3,h4,h5,h6,textarea,select,p,ul,dl,dd,ol,pre,input,th,td{
   margin:0px;
   padding:0px;
@@ -62,6 +63,24 @@ body{
 .fr{ float: right;}
 a{ -webkit-tap-highlight-color:transparent;/*去除a标签的背景阴影*/ }
 input{ -webkit-appearance:none;/*去除input的默认样式*/ }
+@mixin absolute($l: 0, $t: 0, $r: 0, $b: 0, $z: 1) {
+  position: absolute;
+  left: $l;
+  top: $t;
+  right: $r;
+  bottom: $b;
+  z-index: $z;
+}
 #root {
-  position: relative;
+  @include absolute();
+  overflow: hidden;
+}
+@mixin overflow($val: auto) {
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
+  @if ($val == 'x') {
+    overflow-x: auto;
+  } @else if($val == 'y') {
+    overflow-y: auto;
+  }
 }
