--- a/src/assets/sass/pages.scss
+++ b/src/assets/sass/pages.scss
@@ -12,6 +12,64 @@
   &-section {
     background: $fc3a6f;
     @include absolute(0, 56px);
+  }
+  &-left {
+    width: 140px;
+    @include absolute(0, 0, auto, 0, 10);
+    background: $b3e4e63;
+    .menu {
+      li {
+        position: relative;
+        &::before {
+          background: url("../images/pages-nav.png") no-repeat;
+          content: '';
+          width: 22px;
+          height: 22px;
+          @include absolute(20px, 10px);
+        }
+        &.home::before {
+          background-position: 0px -1px;
+        }
+        &.course::before {
+          background-position: -38px -1px;
+        }
+        &.Information::before {
+          background-position: -77px -1px;
+        }
+        &.record::before {
+          background-position: -114px -1px;
+        }
+        &.note::before {
+          background-position: -1px -38px;
+        }
+        &.exchange::before {
+          background-position: -39px -38px;
+        }
+        &.help::before {
+          background-position: -78px -37px;
+        }
+        &.active {
+          background-color: $fc3a6f;
+        }
+        &.help {
+          @include absolute(0, auto, 0, 0, 5);
+        }
+        a {
+          padding-left: 60px;
+          @include height(40px);
+          @include flex('l');
+          font-size: 14px;
+          color: $white;
+        }
+        &.home {
+          background-position: -780px -2285px;
+        }
+      }
+    }
+  }
+  &-content {
     @include overflow('y');
+    @include absolute(150px, 10px, 10px, 10px, 5);
+    background: $white;
   }
 }
