--- a/src/assets/sass/color.scss
+++ b/src/assets/sass/color.scss
@@ -5,3 +5,8 @@ $g89949C: #89949C;
 $e2e2e2: #e2e2e2;
 $b888: #888;
 $F5A623: #F5A623;
+$ff2880: #ff2880;
+$b1650a2: #1650a2;
+$bff366d: #ff366d;
+$bff1a91: #ff1a91;
+$e5e5e5: #e5e5e5;
