--- a/src/assets/sass/pages.scss
+++ b/src/assets/sass/pages.scss
@@ -3,6 +3,9 @@
   width: 100%;
   height: 100%;
   position: relative;
+  &-master {
+    height: 100%;
+  }
   &-header {
     height: 56px;
     @include absolute(0, 0, 0, auto, 50);
