--- a/src/assets/sass/reset.scss
+++ b/src/assets/sass/reset.scss
@@ -32,6 +32,8 @@ input{
 button{
   display: block;
   border:none;
+  outline: none;
+  cursor: pointer;
 }
 body{
   font-size: 13px;
@@ -58,7 +60,8 @@ body{
 .fl{ float: left; }
 .fr{ float: right;}
 a{ -webkit-tap-highlight-color:transparent;/*去除a标签的背景阴影*/ }
-input{ -webkit-appearance:none;/*去除input的默认样式*/ }
+input{ -webkit-appearance:none;
+  outline: none;/*去除input的默认样式*/ }
 @mixin absolute($l: auto, $t: auto, $r: auto, $b: auto, $z: 1) {
   position: absolute;
   left: $l;
